# PythonWeb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env.example  pyproject.toml  test.json
.github/: dependabot.yml
.github/workflows/: ci.yaml
deploy/: nginx.conf
nginx/: nginx.conf
scripts/: pre-commit-mypy.sh
src/auth_service/: auth_router.py  dependencies.py  main.py  repositories.py  role_router.py  schemas.py  services.py
src/cinema_platform/: manage.py
src/cinema_platform/cinema_platform/: asgi.py  settings.py  wsgi.py
src/cinema_platform_django/: manage.py
src/cinema_platform_django/config/: asgi.py  settings.py  urls.py  wsgi.py
src/cinema_platform_django/config/components/: apps.py  databases.py  security.py  static.py  validators.py
src/cinema_platform_django/media_service/: admin.py  apps.py
src/cinema_platform_django/media_service/api/: admin.py  (+3 more)
src/cinema_platform_django/subscription/: admin.py  apps.py  dependencies.py  models.py  tests.py  urls.py
src/cinema_platform_django/user_service/: admin.py  apps.py  dependencies.py  models.py  serializers.py  urls.py  views.py
src/payment/: config.py  main.py
src/payment/api/: __init__.py  auth.py  deps.py  schemas.py
src/payment/domain/: __init__.py  exceptions.py  utils.py
src/payment/infrastructure/: __init__.py  db.py  repositories.py
src/payment/services/: __init__.py  card.py  payments.py
src/recommendation_service/: README.md  requirements.txt  run.py
src/recommendation_service/app/: __init__.py  models.py  routes.py  service.py
src/shared/: auth_token.py
src/shared/payment/: __init__.py  gateway.py
(+72 files in other folders)
