[project]
name = "template-python"
version = "0.1.0"
description = "Github template for projects with uv, ty, and ruff"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "django>=6.0.3",
    "django-rest-framework>=0.1.0",
    "django-split-settings>=1.3.2",
    "djangorestframework-stubs>=3.16.8",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
