[project]
name = "Cinema-Platform"
version = "0.1.1"
description = "Cinema platform for team project in University"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "django>=6.0.3",
    "djangorestframework>=3.15.0",
    "django-split-settings>=1.3.2",
    "djangorestframework-stubs>=3.16.8",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "structlog>=25.5.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0"
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "src.cinema_platform_django.config.settings"
